Fix display of process on mobile

--- a/components/Home/ProcessMobile.css
+++ b/components/Home/ProcessMobile.css
@@ -1,109 +1,4 @@
-.circle-progress-container-mobile {
-    position: relative;
-    margin: 0 auto;
-}
-
-.circle-progress-inner-mobile {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    border-radius: 50%;
-}
-
-.circle-progress-inner-mobile>* {
-    display: block;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-}
-
-.circle-progress-inner-mobile li {
-    cursor: pointer;
-    -webkit-tap-highlight-color: transparent;
-    -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -khtml-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    z-index: 2;
-}
-
-.circle-progress-inner-mobile li:focus {
-    outline: none;
-}
-
-.circle-progress-inner-mobile>*:nth-of-type(8) {
-    transform: translate(-60px, -70px);
-    z-index: 1;
-}
-
-.circle-progress-inner-mobile .b-process-step {
-    background: url("/wp-content/uploads/2021/09/BG_Hexa-inactive.svg");
-    background-position: center;
-    background-repeat: no-repeat !important;
-    background-size: 50px;
-    outline: none !important;
-    padding: 40px;
-}
-
-.circle-progress-inner-mobile .b-process-title {
-    color: #808080;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 20px;
-}
-
-.circle-progress-inner-mobile .b-process-step {
-    color: #0086ff;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 26px;
-}
-
-.circle-progress-inner-mobile .b-process-flex-column {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-
-.circle-progress-inner-mobile .b-process-flex-row {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    align-items: center;
-}
-
-.circle-progress-inner-mobile .b-process-center-title-main {
-    color: #333333;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
-    text-align: center;
-    margin-right: 10px;
-}
-
-.circle-progress-inner-mobile .b-process-center-title {
-    color: #fff;
-    font-size: 12px;
-    font-weight: 600;
-    line-height: 16px;
-    text-align: center;
-}
-
-.circle-progress-inner-mobile .b-process-center-content {
-    color: #fff;
-    font-size: 12px;
-    font-weight: 400;
-    line-height: 16px;
-    text-align: center;
-    margin-right: 5px;
-}
-
-@media (min-width: 1025px) and (max-width: 99999px) {
+@media (min-width: 764px) and (max-width: 99999px) {
     .circle-progress-container-mobile {
         display: none !important;
     }
